[develop]     Add is_verified migration to the User model     Update the activate route business logic     Add the first load event to the base template

--- a/templates/base.html
+++ b/templates/base.html
@@ -186,6 +186,8 @@
             </footer>
         </div>
 
+        <input type="hidden" id="first-loading-message" data-message="{{ loadingMessage }}"/>
+
         <script src="{% static 'js/jquery-3.6.0.min.js' %}"></script>
         <script src="{% static 'js/bootstrap.bundle.min.js' %}"></script>
         <script src="{% static 'js/main.js' %}"></script>
