--- a/templates/base.html
+++ b/templates/base.html
@@ -61,7 +61,11 @@
                             <a class="nav-link" href="{% url 'index' %}">Home</a>
                         {% endif %}
                         {% if user.is_authenticated %}
-                            <a class="nav-link" href="#">Dashboard</a>
+                            {% if request.resolver_match.url_name == 'dashboard' %}
+                                <a class="nav-link active" aria-current="page" href="#">Dashboard</a>
+                            {% else %}
+                                <a class="nav-link" href="{% url 'dashboard' %}">Dashboard</a>
+                            {% endif %}
                         {% else %}
                             <a type="button" class="nav-link" data-bs-toggle="modal" data-bs-target="#signupModal">
                                 Sign up
