[develop]     Add the user profile page

--- a/templates/base.html
+++ b/templates/base.html
@@ -66,6 +66,11 @@
                             {% else %}
                                 <a class="nav-link" href="{% url 'dashboard' %}">Dashboard</a>
                             {% endif %}
+                            {% if request.resolver_match.url_name == 'profile' %}
+                                <a class="nav-link active" aria-current="page" href="#">Profile</a>
+                            {% else %}
+                                <a class="nav-link" href="{% url 'profile' %}">Profile</a>
+                            {% endif %}
                         {% else %}
                             <a type="button" class="nav-link" data-bs-toggle="modal" data-bs-target="#signupModal">
                                 Sign up
