--- a/main/templates/main/profile.html
+++ b/main/templates/main/profile.html
@@ -5,9 +5,28 @@
 {% block content %}
 <main class="px-1">
     <h1>User Profile</h1>
-    <p class="lead">This is a demo website that provides many features.</p>
-    <p class="lead">
-    <a href="#" class="btn btn-lg btn-success fw-bold border-white">Cool</a>
-    </p>
+
+    <div class="mt-5">
+        <h5 class="text-start mb-3">Update Username</h4>
+        <form class="row g-3 needs-validation" novalidate="" id="username-form">
+            <hr class="my-4">
+            <div class="col-3">
+                <label for="oldusername" class="visually-hidden">Old Username</label>
+                <input type="text"
+                       class="text-light text-center form-control-plaintext"
+                       id="oldusername"
+                       value="old username" readonly>
+            </div>
+            <div class="col-7">
+                <label for="newusername" class="visually-hidden">New Username</label>
+                <input type="text" class="form-control" id="newusername" placeholder="New Username">
+            </div>
+            <div class="col-2">
+                <button type="submit" class="btn btn-primary mb-3">Update</button>
+            </div>
+            <hr class="my-4">
+        </form>
+    </div>
+
 </main>
 {% endblock %}
