--- a/main/templates/main/dashboard.html
+++ b/main/templates/main/dashboard.html
@@ -17,7 +17,10 @@
 
     <div class="mt-5">
         <h5 class="text-start mb-3">Update The Password</h4>
-        <form class="needs-validation" novalidate="" id="password-form">
+        <div id="password-success-alert" class="alert alert-success" role="alert" style="display: none;"></div>
+        <div id="password-danger-alert" class="alert alert-danger" role="alert" style="display: none;"></div>
+        <form class="needs-validation" novalidate=""
+              onsubmit="patch_password(event)" id="password-form">
             <hr class="my-4">
             <div class="mb-3 row">
                 <label for="oldPassword" class="col-4 col-form-label">Old Password</label>
@@ -39,7 +42,11 @@
                 </div>
             </div>
             <hr class="my-4">
-            <button class="w-60 btn btn-primary btn-lg" type="submit">Update the password</button>
+            <button class="w-60 btn btn-primary btn-lg"
+                    id="password-button"
+                    type="submit">
+                Update
+            </button>
             <hr class="my-4">
         </form>
     </div>
