[develop]     Add re-send activate email feature

--- a/main/templates/main/dashboard.html
+++ b/main/templates/main/dashboard.html
@@ -6,14 +6,20 @@
 <main class="px-1">
     <h1>Dashboard</h1>
 
+    {% if not user.is_verified %}
     <div class="mt-5">
         <h5 class="text-start mb-3">Resend Email Verification</h4>
-        <form class="needs-validation" novalidate="" id="resend-email-form">
+        <div id="resend-activate-email-success-alert" class="alert alert-success" role="alert" style="display: none;"></div>
+        <div id="resend-activate-email-danger-alert" class="alert alert-danger" role="alert" style="display: none;"></div>
+        <form class="needs-validation" novalidate=""
+              onsubmit="resend_activate_email(event)" id="resend-email-form">
+            <input type="hidden" id="resend-activate-email-url" data-url="{% url "resendActivateEmail" %}" />
             <hr class="my-4">
-            <button class="w-60 btn btn-primary btn-lg" type="submit">Resend</button>
+            <button class="w-60 btn btn-primary btn-lg" type="submit" id="resend-activate-email-button">Resend</button>
             <hr class="my-4">
         </form>
     </div>
+    {% endif %}
 
     <div class="mt-5">
         <h5 class="text-start mb-3">Update The Password</h4>
