[feature/20220401_fb_login]     Only registering by email can modify the password

--- a/main/templates/main/dashboard.html
+++ b/main/templates/main/dashboard.html
@@ -21,6 +21,7 @@
     </div>
     {% endif %}
 
+    {% if not user.isLoginByPassword() %}
     <div class="mt-5">
         <h5 class="text-start mb-3">Update The Password</h4>
         <div id="password-success-alert" class="alert alert-success" role="alert" style="display: none;"></div>
@@ -56,5 +57,6 @@
             <hr class="my-4">
         </form>
     </div>
+    {% endif %}
 </main>
 {% endblock %}
