--- a/main/templates/main/profile.html
+++ b/main/templates/main/profile.html
@@ -14,6 +14,12 @@
             <div class="col-2">
                 <button type="submit" class="btn btn-warning mb-3" id="logout-button">Logout</button>
             </div>
+            <div class="col-6">
+                <input type="text"
+                       class="bg-light text-center form-control-plaintext"
+                       id="useremail"
+                       value="{{ user.email }}" readonly>
+            </div>
         </form>
     </div>
 
