--- a/main/templates/main/dashboard.html
+++ b/main/templates/main/dashboard.html
@@ -13,7 +13,7 @@
         <div id="resend-activate-email-danger-alert" class="alert alert-danger" role="alert" style="display: none;"></div>
         <form class="needs-validation" novalidate=""
               onsubmit="resend_activate_email(event)" id="resend-email-form">
-            <input type="hidden" id="resend-activate-email-url" data-url="{% url "resendActivateEmail" %}" />
+            <input type="hidden" id="resend-activate-email-url" data-url="{% url "resend_activate_email" %}" />
             <hr class="my-4">
             <button class="w-60 btn btn-primary btn-lg" type="submit" id="resend-activate-email-button">Resend</button>
             <hr class="my-4">
